welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: value unary_!_= is not a member of Boolean
	while (!x=true){
               ^